<resources>
    <string name="app_name">iNoBugs 2</string>
    <string name="app_name_display">病虫随手记</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="page_home">主 页</string>
    <string name="page_all_records">所有记录</string>

    <string name="extra_record_key">mRecord</string>
    <string name="extra_disease_round_key">diseaseRound</string>
    <string name="extra_disease_expert_mode_final_round">expertModeFinalRound</string>
    <string name="extra_should_show_edit_fab_button">extraShouldShowEditButton</string>
    <string name="extra_should_show_delete_record_button">extraShouldShowDeleteRecordButton</string>
    <string name="extra_is_editing">extraIsEditing</string>

    <!-- Action bar menu items -->
    <string name="action_about">关于</string>
    <string name="action_result_close">关闭</string>
    <string name="action_result_delete">删除</string>

    <!-- Main fragment -->
    <string name="fragment_main_record_label">条记录</string>
    <string name="fragment_main_click_to_add_record_label">点击 + 添加第一条记录</string>

    <!-- All records list fragment-->
    <string name="fragment_all_records_list_empty_label">无记录</string>

    <!-- Add record activity -->
    <string name="add_record_crop_label">农作物</string>
    <string name="add_record_harm_label">受害类型</string>
    <string name="add_record_harm_radio_label_0">病害</string>
    <string name="add_record_harm_radio_label_1">虫害</string>
    <string name="add_record_mode_label">统计模式</string>
    <string name="add_record_mode_radio_label_0">普通模式</string>
    <string name="add_record_mode_radio_label_1">专家模式</string>
    <string name="add_record_method_label">统计方法</string>
    <string name="add_record_time_label">日期</string>
    <string name="add_record_location_label">地点</string>
    <string name="add_record_note_label">备注</string>
    <string name="add_record_time_hint">YYYY-M-D</string>
    <string name="add_record_location_hint">请输入地点</string>
    <string name="add_record_note_hint">请输入备注 (可选)</string>

    <!-- Area and crop activity -->
    <string name="area_and_count_total_area_label">总面积</string>
    <string name="area_and_count_affected_area_label">受害面积</string>
    <string name="area_and_count_total_crop_number_label">总株数</string>
    <string name="area_and_count_affected_disease_crop_number_label">受害株数</string>
    <string name="area_and_count_affected_bug_crop_number_label">虫株数</string>
    <string name="area_and_count_affected_egg_crop_number_label">卵株数</string>
    <string name="area_and_count_area_hint">请输入面积</string>
    <string name="area_and_count_crop_count_hint">请输入株数</string>
    <string name="area_and_count_edit_text_default_text">0</string>

    <!-- Bug Selection Activity -->
    <string name="bug_selection_bug_name_label">害虫名称</string>
    <string name="bug_selection_count_egg_label">虫卵数</string>
    <string name="bug_selection_count_bug_age_1_label">1 龄虫数</string>
    <string name="bug_selection_count_bug_age_2_label">2 龄虫数</string>
    <string name="bug_selection_count_bug_age_3_label">3 龄虫数</string>
    <string name="bug_selection_count_bug_age_4_label">4 龄虫数</string>
    <string name="bug_selection_count_bug_age_5_label">5 龄虫数</string>
    <string name="bug_selection_count_bug_age_6_label">6 龄虫数</string>

    <!-- About activity-->
    <string name="about_version">2.0</string>
    <string name="about_build">20170217</string>
    <string name="about_author">代码/UI: Ryan</string>
    <string name="about_special_thanks">特别鸣谢: Louz</string>
    <string name="about_copyright">© 2017 laterain.io</string>

    <!-- Bug result activity -->
    <string name="result_bug_text_view_default_text">无</string>
    <string name="result_bug_text_view_default_number_value">0</string>
    <string name="result_bug_basic_info_title_label">基本信息</string>
    <string name="result_bug_basic_info_type_label">类型</string>
    <string name="result_bug_basic_info_date_and_location_label">日期和地点</string>
    <string name="result_bug_basic_info_method_and_mode_label">统计方法和模式</string>
    <string name="result_bug_bug_name_title_label">虫害名称</string>
    <string name="result_bug_egg_and_bug_sum_title_label">卵和成虫数量</string>
    <string name="result_bug_count_detail_title_label">数量详情</string>
    <string name="result_bug_count_detail_age_1_label">1 龄虫</string>
    <string name="result_bug_count_detail_age_2_label">2 龄虫</string>
    <string name="result_bug_count_detail_age_3_label">3 龄虫</string>
    <string name="result_bug_count_detail_age_4_label">4 龄虫</string>
    <string name="result_bug_count_detail_age_5_label">5 龄虫</string>
    <string name="result_bug_count_detail_age_6_label">6 龄虫</string>
    <string name="result_bug_count_detail_bug_count_total_label">成虫总量</string>
    <string name="result_bug_count_detail_egg_count_total_label">虫卵总量</string>
    <string name="result_bug_count_result_title_label">统计结果</string>
    <string name="result_bug_count_result_total_area_label">总面积</string>
    <string name="result_bug_count_result_affected_area_label">受害面积</string>
    <string name="result_bug_count_result_total_crop_count_label">总株数</string>
    <string name="result_bug_count_result_affected_bug_crop_count_label">虫株数</string>
    <string name="result_bug_count_result_affected_egg_crop_count_label">卵株数</string>
    <string name="result_bug_count_result_affected_area_percentage_label">受害面积率</string>
    <string name="result_bug_count_result_affected_bug_crop_count_percentage_label">虫株率</string>
    <string name="result_bug_count_result_affected_egg_crop_count_percentage_label">卵株率</string>
    <string name="result_bug_note_title_label">备注</string>

    <!-- Disease result activity -->
    <string name="result_disease_text_view_default_text">无</string>
    <string name="result_disease_text_view_default_number_value">0</string>
    <string name="result_disease_basic_info_title_label">基本信息</string>
    <string name="result_disease_basic_info_type_label">类型</string>
    <string name="result_disease_basic_info_date_and_location_label">日期和地点</string>
    <string name="result_disease_basic_info_method_and_mode_label">统计方法和模式</string>
    <string name="result_disease_diagnose_result_title_label">诊断结果</string>
    <string name="result_disease_disease_name_title_label">病害名称</string>
    <string name="result_disease_disease_detail_title_label">症状详情</string>
    <string name="result_disease_disease_detail_part_0_label">部位 0</string>
    <string name="result_disease_disease_detail_part_1_label">部位 1</string>
    <string name="result_disease_disease_detail_part_2_label">部位 2</string>
    <string name="result_disease_disease_detail_part_3_label">部位 3</string>
    <string name="result_disease_disease_detail_part_4_label">部位 4</string>
    <string name="result_disease_disease_detail_part_5_label">部位 5</string>
    <string name="result_disease_disease_detail_part_6_label">部位 6</string>
    <string name="result_disease_disease_detail_part_7_label">部位 7</string>
    <string name="result_disease_disease_expert_mode_final_round_disease_name_label">病害名称</string>
    <string name="result_disease_count_result_title_label">统计结果</string>
    <string name="result_disease_count_result_total_area_label">总面积</string>
    <string name="result_disease_count_result_affected_area_label">受害面积</string>
    <string name="result_disease_count_result_total_crop_count_label">总株数</string>
    <string name="result_disease_count_result_affected_disease_crop_count_label">受害株数</string>
    <string name="result_disease_count_result_affected_area_percentage_label">受害面积率</string>
    <string name="result_disease_count_result_affected_disease_crop_count_percentage_label">受害株率</string>
    <string name="result_disease_note_title_label">备注</string>

    <!-- About alert dialog fragment -->
    <string name="dialog_about_title">I Didn\'t Change This</string>
    <string name="dialog_about_message">Did you like somebody in 2014 when you were building this app at the first time?</string>
    <string name="dialog_about_button_1_text">Yes</string>
    <string name="dialog_about_button_2_text">Yup</string>
    <string name="dialog_about_button_3_text">Of course</string>
    <string name="dialog_about_button_1_toast_message">Too lazy to translate. ; )</string>
    <string name="dialog_about_button_2_toast_message">Too lazy to translate. : P</string>
    <string name="dialog_about_button_3_toast_message">Too lazy to translate. : D</string>

    <!-- Universal alert dialog fragment -->
    <string name="dialog_universal_save_record_success_title">保存记录成功</string>
    <string name="dialog_universal_discard_saving_record_title">放弃保存记录</string>
    <string name="dialog_universal_discard_saving_record_message">这条记录将不会被保存</string>
    <string name="dialog_universal_discard_editing_record_title">放弃编辑记录</string>
    <string name="dialog_universal_discard_editing_record_message">所做的更改将不会被保存</string>
    <string name="dialog_universal_delete_title">删除记录</string>
    <string name="dialog_universal_delete_message">这条记录将被永久删除</string>
    <string name="dialog_universal_negative_button_text">确定</string>

    <!-- Toast messages -->
    <string name="toast_message_invalid_date">日期格式有误</string>
    <string name="toast_message_incomplete_input">信息填写不完整</string>
    <string name="toast_message_invalid_area_invalid_format">面积格式有误</string>
    <string name="toast_message_invalid_area_greater_than_zero">面积应大于 0</string>
    <string name="toast_message_invalid_area_total_greater_than_affected">总面积不能小于受害面积</string>
    <string name="toast_message_invalid_crop_count_invalid_format">株数格式有误</string>
    <string name="toast_message_invalid_crop_count_greater_than_zero">株数应大于 0</string>
    <string name="toast_message_invalid_crop_count_total_greater_than_affected">总株数不能小于受害株数总和</string>
    <string name="toast_message_invalid_crop_count_total_greater_than_affected_disease">总株数不能小于受害株数</string>
    <string name="toast_message_invalid_bug_or_egg_count_invalid_format">害虫成虫或虫卵数格式有误</string>
    <string name="toast_message_deleting_record_success">删除数据成功</string>
    <string name="toast_message_deleting_record_error">删除数据错误</string>

    <!-- SQL database inquiries-->
    <string name="sql_select_all_diagnose_records">SELECT * FROM DIAGNOSE_RECORD</string>
    <string name="sql_count_disease_diagnose_records_where_clause">M_HARM = 0</string>
    <string name="sql_count_bug_diagnose_records_where_clause">M_HARM = 1</string>

</resources>
