<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/inoutitem"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_add_record_crop_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_text_add_record_invisible_0"
                android:layout_alignEnd="@+id/text_view_add_record_harm_label"
                android:layout_alignStart="@+id/text_view_add_record_harm_label"
                android:gravity="end"
                android:text="@string/add_record_crop_label"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <TextView
                android:id="@+id/text_view_add_record_harm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_text_add_record_invisible_1"
                android:layout_alignBottom="@+id/edit_text_add_record_invisible_1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:text="@string/add_record_harm_label"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <TextView
                android:id="@+id/text_view_add_record_mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_text_add_record_invisible_2"
                android:layout_alignBottom="@+id/edit_text_add_record_invisible_2"
                android:layout_alignStart="@+id/text_view_add_record_method_label"
                android:gravity="end"
                android:text="@string/add_record_mode_label"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <TextView
                android:id="@+id/text_view_add_record_method_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_text_add_record_invisible_3"
                android:layout_alignBottom="@+id/edit_text_add_record_invisible_3"
                android:layout_alignStart="@+id/text_view_add_record_time_label"
                android:gravity="end"
                android:text="@string/add_record_method_label"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <TextView
                android:id="@+id/text_view_add_record_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_text_add_record_time"
                android:layout_alignEnd="@+id/text_view_add_record_harm_label"
                android:layout_alignStart="@+id/text_view_add_record_harm_label"
                android:gravity="end"
                android:text="@string/add_record_time_label"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <TextView
                android:id="@+id/text_view_add_record_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_text_add_record_location"
                android:layout_alignBottom="@+id/edit_text_add_record_location"
                android:layout_alignEnd="@+id/text_view_add_record_harm_label"
                android:layout_alignStart="@+id/text_view_add_record_harm_label"
                android:gravity="end"
                android:text="@string/add_record_location_label"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <TextView
                android:id="@+id/text_view_add_record_note_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_text_add_record_note"
                android:layout_alignEnd="@+id/text_view_add_record_harm_label"
                android:layout_alignStart="@+id/text_view_add_record_harm_label"
                android:layout_alignTop="@+id/edit_text_add_record_note"
                android:gravity="end"
                android:text="@string/add_record_note_label"
                android:textAppearance="@android:style/TextAppearance.Material" />

            <EditText
                android:id="@+id/edit_text_add_record_invisible_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/text_view_add_record_location_label"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edit_text_add_record_invisible_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_0"
                android:layout_below="@+id/spinner_add_record_crop"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edit_text_add_record_invisible_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_0"
                android:layout_below="@+id/edit_text_add_record_invisible_1"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edit_text_add_record_invisible_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_0"
                android:layout_below="@+id/edit_text_add_record_invisible_2"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edit_text_add_record_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_0"
                android:layout_below="@+id/edit_text_add_record_invisible_3"
                android:digits="0123456789-"
                android:hint="@string/add_record_time_hint"
                android:inputType="datetime"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse" />

            <EditText
                android:id="@+id/edit_text_add_record_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_0"
                android:layout_below="@+id/edit_text_add_record_time"
                android:hint="@string/add_record_location_hint"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edit_text_add_record_note"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignEnd="@+id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_0"
                android:layout_below="@id/edit_text_add_record_location"
                android:gravity="top"
                android:hint="@string/add_record_note_hint"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:textAppearance="@android:style/TextAppearance.Material.Inverse" />

            <Spinner
                android:id="@+id/spinner_add_record_crop"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_alignBottom="@id/edit_text_add_record_invisible_0"
                android:layout_alignEnd="@+id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_0"
                android:layout_alignTop="@+id/edit_text_add_record_invisible_0" />

            <RadioGroup
                android:id="@+id/radio_group_add_record_harm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/edit_text_add_record_invisible_1"
                android:layout_alignTop="@id/edit_text_add_record_invisible_1"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/text_view_add_record_harm_label"
                android:orientation="horizontal"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/radio_button_add_record_harm_disease"
                    style="@android:style/Widget.Material.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/add_record_harm_radio_label_0"
                    android:textAppearance="@android:style/TextAppearance.Material" />

                <RadioButton
                    android:id="@+id/radio_button_add_record_harm_bug"
                    style="@android:style/Widget.Material.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:checked="false"
                    android:text="@string/add_record_harm_radio_label_1"
                    android:textAppearance="@android:style/TextAppearance.Material" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_add_record_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/edit_text_add_record_invisible_0"
                android:layout_alignStart="@id/edit_text_add_record_invisible_0"
                android:layout_below="@+id/edit_text_add_record_invisible_1"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/text_view_add_record_mode_label"
                android:orientation="horizontal"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/radio_button_add_record_mode_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/add_record_mode_radio_label_0"
                    android:textAppearance="@android:style/TextAppearance.Material" />


                <RadioButton
                    android:id="@+id/radio_button_add_record_mode_expert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:checked="false"
                    android:text="@string/add_record_mode_radio_label_1"
                    android:textAppearance="@android:style/TextAppearance.Material" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinner_add_record_method"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_alignEnd="@+id/edit_text_add_record_time"
                android:layout_alignStart="@+id/edit_text_add_record_time"
                android:layout_below="@+id/edit_text_add_record_invisible_2"
                android:layout_toEndOf="@+id/text_view_add_record_method_label" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_action_button_add_record_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@mipmap/ic_keyboard_arrow_right_white_24dp" />

</RelativeLayout>
	